@@ -47,8 +47,7 @@ public class TestSelectByExample {
 
     @Test
     public void testSelectByExample() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.createCriteria().andGreaterThan("id", 100).andLessThan("id", 151);
@@ -56,30 +55,24 @@ public class TestSelectByExample {
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(90, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testSelectByExampleException() {
         Assertions.assertThrows(Exception.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country2.class);
                 example.createCriteria().andGreaterThan("id", 100);
                 mapper.selectByExample(example);
-            } finally {
-                sqlSession.close();
             }
         });
     }
 
     @Test
     public void testSelectByExampleForUpdate() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.setForUpdate(true);
@@ -88,15 +81,12 @@ public class TestSelectByExample {
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(90, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testAndExample() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.createCriteria()
@@ -105,49 +95,39 @@ public class TestSelectByExample {
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(3, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testSelectByExampleInNotIn() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
-            Set<Integer> set = new HashSet<Integer>();
-            set.addAll(Arrays.asList(new Integer[]{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11}));
+            Set<Integer> set = new HashSet<>(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11));
             example.createCriteria().andIn("id", set)
-                    .andNotIn("id", Arrays.asList(new Object[]{11}));
+                    .andNotIn("id", List.of(11));
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(10, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testSelectByExampleInNotIn2() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
-            example.createCriteria().andIn("id", Arrays.asList(new Integer[]{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11}))
-                    .andNotIn("id", Arrays.asList(new Object[]{11}));
+            example.createCriteria().andIn("id", Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11))
+                    .andNotIn("id", List.of(11));
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(10, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testSelectByExample2() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.createCriteria().andLike("countryname", "A%");
@@ -155,16 +135,13 @@ public class TestSelectByExample {
             example.setDistinct(true);
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
-            Assertions.assertEquals(true, countries.size() > 83);
-        } finally {
-            sqlSession.close();
+            Assertions.assertTrue(countries.size() > 83);
         }
     }
 
     @Test
     public void testSelectByExample3() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             CountryExample example = new CountryExample();
             example.createCriteria().andCountrynameLike("A%");
@@ -172,16 +149,13 @@ public class TestSelectByExample {
             example.setDistinct(true);
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
-            Assertions.assertEquals(true, countries.size() > 83);
-        } finally {
-            sqlSession.close();
+            Assertions.assertTrue(countries.size() > 83);
         }
     }
 
     @Test
     public void testSelectByExample4() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             Country ct = new Country();
             ct.setCountryname("China");
 
@@ -192,17 +166,13 @@ public class TestSelectByExample {
             //查询总数
             System.out.println(countries.get(0).toString());
             Assertions.assertEquals(1, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
-
 
     @Test
     public void testSelectColumnsByExample() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
                 example.createCriteria().andGreaterThan("id", 100).andLessThan("id", 151);
@@ -211,16 +181,13 @@ public class TestSelectByExample {
                 List<Country> countries = mapper.selectByExample(example);
                 //查询总数
                 Assertions.assertEquals(90, countries.size());
-            } finally {
-                sqlSession.close();
             }
         }, "类 Country 不包含属性 'hehe'，或该属性被@Transient注释！");
     }
 
     @Test
     public void testExcludeColumnsByExample() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.createCriteria().andGreaterThan("id", 100).andLessThan("id", 151);
@@ -229,15 +196,12 @@ public class TestSelectByExample {
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(90, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testAndOr() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
             example.createCriteria().andGreaterThan("id", 100).andLessThan("id", 151);
@@ -254,24 +218,19 @@ public class TestSelectByExample {
             countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(183, countries.size());
-        } finally {
-            sqlSession.close();
         }
     }
 
     @Test
     public void testOrderBy() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
-//            example.setOrderByClause("id desc");
+            // example.setOrderByClause("id desc");
             example.orderBy("id").desc().orderBy("countryname").orderBy("countrycode").asc();
             List<Country> countries = mapper.selectByExample(example);
             //查询总数
             Assertions.assertEquals(183, (int) countries.get(0).getId());
-        } finally {
-            sqlSession.close();
         }
     }
 
@@ -280,18 +239,15 @@ public class TestSelectByExample {
      */
     @Test
     public void testSelectPropertisCheckCorrect() {
-        SqlSession sqlSession = MybatisHelper.getSqlSession();
-        try {
+        try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
             CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
             Example example = new Example(Country.class);
-            example.selectProperties(new String[]{"countryname"});
+            example.selectProperties("countryname");
             example.createCriteria().andEqualTo("id", 35);
             List<Country> country1 = mapper.selectByExample(example);
-            Assertions.assertEquals(null, country1.get(0).getId());
+            Assertions.assertNull(country1.get(0).getId());
             Assertions.assertEquals("China", country1.get(0).getCountryname());
-            Assertions.assertEquals(null, country1.get(0).getCountrycode());
-        } finally {
-            sqlSession.close();
+            Assertions.assertNull(country1.get(0).getCountrycode());
         }
     }
 
@@ -301,18 +257,15 @@ public class TestSelectByExample {
     @Test
     public void testSelectPropertisCheckSpellWrong() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
-                example.selectProperties(new String[]{"countrymame"});
+                example.selectProperties("countrymame");
                 example.createCriteria().andEqualTo("id", 35);
                 List<Country> country2 = mapper.selectByExample(example);
-                Assertions.assertEquals(null, country2.get(0).getId());
+                Assertions.assertNull(country2.get(0).getId());
                 Assertions.assertEquals("China", country2.get(0).getCountryname());
-                Assertions.assertEquals(null, country2.get(0).getCountrycode());
-            } finally {
-                sqlSession.close();
+                Assertions.assertNull(country2.get(0).getCountrycode());
             }
         }, "类 Country 不包含属性 'countrymame'，或该属性被@Transient注释！");
     }
@@ -323,15 +276,12 @@ public class TestSelectByExample {
     @Test
     public void testSelectPropertisCheckTransient1() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
-                example.selectProperties(new String[]{"name"});
+                example.selectProperties("name");
                 example.createCriteria().andEqualTo("id", 35);
                 List<Country> country = mapper.selectByExample(example);
-            } finally {
-                sqlSession.close();
             }
         }, "类 Country 不包含属性 'name'，或该属性被@Transient注释！");
     }
@@ -342,15 +292,12 @@ public class TestSelectByExample {
     @Test
     public void testSelectPropertisCheckTransient2() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
-                example.selectProperties(new String[]{"dynamicTableName123"});
+                example.selectProperties("dynamicTableName123");
                 example.createCriteria().andEqualTo("id", 35);
                 List<Country> country = mapper.selectByExample(example);
-            } finally {
-                sqlSession.close();
             }
         }, "类 Country 不包含属性 'dynamicTableName123'，或该属性被@Transient注释！");
     }
@@ -361,15 +308,12 @@ public class TestSelectByExample {
     @Test
     public void testExcludePropertisCheckWrongSpell() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
-                example.excludeProperties(new String[]{"countrymame"});
+                example.excludeProperties("countrymame");
                 example.createCriteria().andEqualTo("id", 35);
                 List<Country> country = mapper.selectByExample(example);
-            } finally {
-                sqlSession.close();
             }
         }, "类 Country 不包含属性 'countrymame'，或该属性被@Transient注释！");
 
@@ -381,15 +325,12 @@ public class TestSelectByExample {
     @Test
     public void testExcludePropertisCheckTransient() {
         Assertions.assertThrows(MapperException.class, () -> {
-            SqlSession sqlSession = MybatisHelper.getSqlSession();
-            try {
+            try (SqlSession sqlSession = MybatisHelper.getSqlSession()) {
                 CountryMapper mapper = sqlSession.getMapper(CountryMapper.class);
                 Example example = new Example(Country.class);
-                example.excludeProperties(new String[]{"dynamicTableName123"});
+                example.excludeProperties("dynamicTableName123");
                 example.createCriteria().andEqualTo("id", 35);
                 List<Country> country = mapper.selectByExample(example);
-            } finally {
-                sqlSession.close();
             }
         }, "类 Country 不包含属性 'dynamicTableName123'，或该属性被@Transient注释！");
     }
